[package]
name = "resourcery"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
dashmap = "6"
event-listener = "5"
parking_lot = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-util = "0.7"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.8"
loom = "0.7"
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
